--- a/index.html
+++ b/index.html
@@ -14,17 +14,20 @@
  <body>
   
   <header>
-     <h1>Rocket<span>Coffee</span></h1>
+     <h1>Ziggs<span>Coffee</span></h1>
+     <p>Cafeteria e Lanchonete.</p>
+     <br />
      <p>Aberto todos os dias 8h-21h</p>
   </header>
 
+  <!--------------------- PORCOES -------------------->
   <section>
       <h2>Porcoes</h2>
 
       <ul>
         <li>
           <div class="details">
-            <h3>Batata com bacon e cheddar</h3>
+            <h3>Batata Com Bacon e Cheddar</h3>
             <p class="description">
              Uma porcao de batata frita com bacon crocante e um 
              delicioso cheddar derretido.
@@ -49,16 +52,44 @@
               R$10.00
             </strong>
           </li>
+
+          <li>
+            <div class="details">
+              <h3>Frutos Do Mar</h3>
+              <p class="description">
+               Uma porcao de anéis de lula, isca de peixe e 
+               camaroes fritos.
+              </p>
+            </div>
+  
+            <strong class="price">
+              R$14.00
+            </strong>
+          </li>
+
+          <li>
+            <div class="details">
+              <h3>Pastéis</h3>
+              <p class="description">
+               Uma porcao de pastéis de carne, frango e queijo.
+              </p>
+            </div>
+  
+            <strong class="price">
+              R$12.00
+            </strong>
+          </li>
       </ul>
   </section>
 
+<!--------------------- BEBIDAS -------------------->
   <section>
     <h2>Bebidas</h2>
 
     <ul>
       <li>
         <div class="details">
-          <h3>Água</h3>
+          <h3>Água Natural</h3>
           <p class="description">
            Água natural.
           </p>
@@ -66,6 +97,19 @@
 
         <strong class="price">
           R$2.00
+        </strong>
+      </li>
+
+      <li>
+        <div class="details">
+          <h3>Suco de Laranja</h3>
+          <p class="description">
+           Suco sabor laranja com acucar de preferencia do cliente.
+          </p>
+        </div>
+
+        <strong class="price">
+          R$3.50
         </strong>
       </li>
 
@@ -81,7 +125,27 @@
             R$3.50
           </strong>
         </li>
+
+        <li>
+          <div class="details">
+            <h3>Cerveja Long Neck</h3>
+            <p class="description">
+             Cerveja Long Neck EISENBAHN, STELLA, BUDWEISER, HEINEKEN.
+            </p>
+          </div>
+
+          <strong class="price">
+            R$3.50
+          </strong>
+        </li>
     </ul>
 </section>
+
+<footer> 
+  Feito com ❤️ pelo 
+<a href="https://www.instagram.com/canedodev/" target="_blank">
+   canedodev</a>
+</footer>
+
  </body>
 </html>
